// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarContent Component when Natura light theme is provided and when color is provided should match to snapshot - SnackbarContent default with colors: SnackbarContent color default snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-default-1 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when Natura light theme is provided and when color is provided should match to snapshot - SnackbarContent default with colors: SnackbarContent color error snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-error-2 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when Natura light theme is provided and when color is provided should match to snapshot - SnackbarContent default with colors: SnackbarContent color info snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-info-3 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when Natura light theme is provided and when color is provided should match to snapshot - SnackbarContent default with colors: SnackbarContent color success snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-success-4 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when Natura light theme is provided and when color is provided should match to snapshot - SnackbarContent default with colors: SnackbarContent color warning snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-warning-5 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when Natura light theme is provided and when no props are provided should match snapshot: SnackbarContent default with custom theme snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-default-1 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when empty theme is provided should match snapshot: SnackbarContent default snapshot 1`] = `
<div
  className="natds-MuiPaper-root natds-MuiSnackbarContent-root natds-NatDSSnackbarContent-default-1 natds-MuiPaper-elevation6"
  role="alert"
>
  <div
    className="natds-MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component when no theme is provided should match snapshot: SnackbarContent default snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root NatDSSnackbarContent-default-1 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;
